WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186149
REGRESSION (
r229935
): Memory leak under NetworkStateNotifier::updateStateWithoutNotifying()
https://bugs.webkit.org/show_bug.cgi?id=186149
Summary
REGRESSION (r229935): Memory leak under NetworkStateNotifier::updateStateWith...
Chris Dumez
Reported
2018-05-31 09:26:40 PDT
Fix memory leak under NetworkStateNotifier::updateStateWithoutNotifying().
Attachments
Patch
(1.58 KB, patch)
2018-05-31 10:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-05-31 09:26:53 PDT
<
rdar://problem/40674537
>
Chris Dumez
Comment 2
2018-05-31 10:04:08 PDT
Created
attachment 341669
[details]
Patch
Geoffrey Garen
Comment 3
2018-05-31 10:12:15 PDT
Comment on
attachment 341669
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2018-05-31 10:39:05 PDT
Comment on
attachment 341669
[details]
Patch Clearing flags on attachment: 341669 Committed
r232354
: <
https://trac.webkit.org/changeset/232354
>
WebKit Commit Bot
Comment 5
2018-05-31 10:39:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug