Fix memory leak under NetworkStateNotifier::updateStateWithoutNotifying() https://bugs.webkit.org/show_bug.cgi?id=186149 <rdar://problem/40674537>

Reviewed by Geoffrey Garen.

* platform/network/mac/NetworkStateNotifierMac.cpp:
(WebCore::NetworkStateNotifier::updateStateWithoutNotifying):


Canonical link: https://commits.webkit.org/201567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232354 268f45cc-cd09-0410-ab3c-d52691b4dbfc